--- a/home.html
+++ b/home.html
@@ -22,6 +22,18 @@
                 font-size: 3.5rem;
             }
         }
+        
+        footer {
+            background-color: #163f6e;
+            color: white;
+            margin: 0px;
+            width: 100%;
+            height: 100px;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
     <!-- Custom styles for this template -->
 </head>
@@ -80,7 +92,7 @@
 
     </main>
 
-    <footer class="container">
+    <footer class="container cn">
         <p>&copy; Jeet Bahadur</p>
     </footer>
 
